--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "js"
   ],
   "author": "victor",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1",
+    "faker": "^5.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
