--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "victor",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "mongoose": "^6.0.12"
